Styling and redux exploration

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,9 @@
   "license": "ISC",
   "dependencies": {
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-bootstrap": "^0.32.1",
+    "react-dom": "^16.2.0",
+    "redux": "^4.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
