--- a/frontend/.babelrc
+++ b/frontend/.babelrc
@@ -1,4 +1,3 @@
 {
-  "presets": ["env", "react"],
-  "plugins": ["transform-class-properties", "transform-object-rest-spread"]
+  "plugins": ["@babel/plugin-proposal-class-properties"]
 }
