--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,22 +11,23 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "alias": {
+    "process": false
+  },
   "dependencies": {
-    "history": "^4.7.2",
-    "react": "^16.4.2",
+    "history": "^4.10.1",
+    "react": "^16.14.0",
     "react-bootstrap": "^0.32.1",
-    "react-dom": "^16.2.0",
-    "react-redux": "^5.0.7",
+    "react-dom": "^16.14.0",
+    "react-redux": "^5.1.2",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1"
+    "@babel/core": "^7.19.6",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "process": "^0.11.10"
   }
 }
