--- a/package.json
+++ b/package.json
@@ -19,8 +19,13 @@
   "bugs": {
     "url": "https://github.com/15Dkatz/dragonstack-scripts/issues"
   },
+  "alias": {
+    "process": false
+  },
   "homepage": "https://github.com/15Dkatz/dragonstack-scripts#readme",
   "devDependencies": {
-    "nodemon": "^1.19.4"
+    "nf": "^0.0.3",
+    "nodemon": "^1.19.4",
+    "process": "^0.11.10"
   }
 }
