--- a/backend/package.json
+++ b/backend/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "start": "node ./bin/server",
     "dev": "nodemon ./bin/server",
-    "configure-dev": "npm run configure && npm run dev",
-    "configure": "node ./bin/insertTraits.js"
+    "configure-dev": "npm run configure && npm run dev"
   },
   "author": "",
   "license": "ISC",
@@ -21,6 +20,7 @@
     "cors": "^2.8.5",
     "crypto-js": "^3.3.0",
     "express": "^4.18.2",
+    "helmet": "^6.0.0",
     "pg": "^7.18.2",
     "uuid": "^3.3.2"
   }
