--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "concurrently": "^7.5.0",
     "nodemon": "^1.19.4",
+    "parcel": "^2.7.0",
     "process": "^0.11.10"
   }
 }
